[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfastflow"
version = "0.0.1"
description = "GPU geomorphological and hydraulic flow routines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Boris Gailleton", email = "boris.gailleton@univ-rennes.fr"},
]
keywords = ["geomorphology", "hydraulics", "flow", "routing", "GPU", "taichi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "taichi>=1.4.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "click>=7.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "ruff>=0.1.0",
]
topotoolbox = [
    "topotoolbox",
]
visugl = [
    "moderngl>=5.8.0",
    "moderngl-window>=2.4.0",
    "imgui[glfw]>=1.4.0",
    "glfw>=2.5.0",
]
"3dterrain" = [
    "moderngl>=5.8.0",
    "moderngl-window>=2.4.0",
    "imgui[glfw]>=1.4.0",
    "glfw>=2.5.0",
    "rasterio>=1.3.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/bgailleton/fastflow_taichi"
Repository = "https://github.com/bgailleton/fastflow_taichi"
Issues = "https://github.com/bgailleton/fastflow_taichi/issues"

[project.scripts]
pff-raster2npy = "pyfastflow.cli.raster_commands:raster2npy"
pff-upscale = "pyfastflow.cli.rastermanip_commands:raster_upscale"
pff-downscale = "pyfastflow.cli.rastermanip_commands:raster_downscale"
pff-dem2png = "pyfastflow.cli.dem2png_commands:dem2png"
pff-boundary-gui = "pyfastflow.cli.grid_commands:boundary_gui"
pff-precip-gui = "pyfastflow.cli.precip_commands:precipitation_gui"
pff-terrain3d = "pyfastflow.cli.terrain3d_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfastflow*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# Enable PEP8 style checks and more fixable rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade (modernize Python syntax)
    "COM", # flake8-commas
    "Q",   # flake8-quotes
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "COM812", # trailing comma missing (conflicts with formatter)
    "COM819", # trailing comma prohibited (conflicts with formatter)
]

[tool.ruff.format]
# Black-compatible formatter settings
quote-style = "double"
indent-style = "space"
line-ending = "auto"
